# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  game.cpp
libs/: CMakeLists.txt
libs/camera/: CMakeLists.txt  camera.cpp  camera.h
libs/geometry/: CMakeLists.txt  cube.cpp  cube.h  triangle.cpp  triangle.h
libs/glad/: CMakeLists.txt  glad.c  glad.h
libs/shader/: CMakeLists.txt  shader.cpp  shader.h
libs/texture/: CMakeLists.txt  texture.cpp  texture.h
resources/shaders/: fShader.glsl  vShader.glsl
