cmake_minimum_required(VERSION 3.1)
project (mylibs)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory("glfw")
add_subdirectory("glm")
add_subdirectory("glad")
add_subdirectory("texture")
add_subdirectory("shader")
add_subdirectory("geometry")
add_subdirectory("camera")
add_subdirectory("assimp")